# iic_repasoC

./: CMakeLists.txt  README.md
basic_file_io/: datos.txt  file_io.c  log.txt
centroid_from_file/: centroide.c
file_simple_protocol/: fichero.txt  file_simple_prot_main.c
point_malloc/: point.c
read_dimacs/: TODO.txt  TRABAJO.txt  brock200_1.clq  mygraph.txt  read_dimacs.c
read_matrix/: matriz.txt  read_matrix.c
